Changed the cmakes so that the solutions will include the xml files for easy editting. If you just change the xml files. You must open up CMAkeLists.txt and control s or somehow save it. Only then will the server manager part of the plugin be recreated, as it iswritten whenever CMake reruns.

--- a/LaplacianOfGaussianFilter/CMakeLists.txt
+++ b/LaplacianOfGaussianFilter/CMakeLists.txt
@@ -15,9 +15,12 @@ ELSE(ITK_FOUND)
   MESSAGE(FATAL_ERROR "Cannot locate ITK directory.")
 ENDIF(ITK_FOUND)
 
+SET(XML LaplacianOfGaussianFilter.xml)
+
 ADD_PARAVIEW_PLUGIN(${PLUGIN} 1.0
-	SERVER_MANAGER_XML     LaplacianOfGaussianFilter.xml
+	SERVER_MANAGER_XML     ${XML}
 	SERVER_MANAGER_SOURCES vtkLaplacianOfGaussianFilter.cxx
+	SOURCES ${XML}
 )
 
 # This lets you build INSTALL and have it automatically drop the
