* ParaViewITKPlugins\CMakeLists: Added new filters
* MedianImageFilter: Changed radius parameter type from int to double

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,5 @@ ADD_SUBDIRECTORY( GaussianBlurImageFilter )
 ADD_SUBDIRECTORY( LaplacianOfGaussianFilter )
 ADD_SUBDIRECTORY( MedianImageFilter )
 ADD_SUBDIRECTORY( NoiseImageFilter )
+ADD_SUBDIRECTORY( MeanImageFilter )
+ADD_SUBDIRECTORY( OtsuThresholdImageFilter )
