--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 PROJECT(ParaViewITKPlugins)
 
+SET(CMAKE_MODULE_PATH ${ParaViewITKPlugins_SOURCE_DIR}/CMake)
+
 FIND_PACKAGE(ParaView REQUIRED)
 IF(ParaView_FOUND)
   INCLUDE(${PARAVIEW_USE_FILE})
@@ -15,10 +17,17 @@ ELSE(ITK_FOUND)
   MESSAGE(FATAL_ERROR "Cannot locate ITK directory.")
 ENDIF(ITK_FOUND)
 
+MARK_AS_ADVANCED(USE_FFTWD)
+OPTION(USE_FFTWD "Use double precision FFTW if found" ON)
+MARK_AS_ADVANCED(USE_FFTWF)
+OPTION(USE_FFTWF "Use single precision FFTW if found" ON)
+FIND_PACKAGE(FFTW REQUIRED)
+
 # Add supporting directories below
 ADD_SUBDIRECTORY( InsightJournal )
 
 # Add plugins directories below
+ADD_SUBDIRECTORY( FFTConvolutionImageFilter )
 ADD_SUBDIRECTORY( GaussianBlurImageFilter )
 ADD_SUBDIRECTORY( LaplacianOfGaussianFilter )
 ADD_SUBDIRECTORY( MedianImageFilter )
