Compilation of the FFTConvolutionImageFilter is not done under Windows because the FFT based convolution filters from Gaetan Lehmann do not compile on Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,12 @@ FIND_PACKAGE(FFTW REQUIRED)
 ADD_SUBDIRECTORY( InsightJournal )
 
 # Add plugins directories below
-ADD_SUBDIRECTORY( FFTConvolutionImageFilter )
 ADD_SUBDIRECTORY( GaussianBlurImageFilter )
 ADD_SUBDIRECTORY( LaplacianOfGaussianFilter )
 ADD_SUBDIRECTORY( MedianImageFilter )
 ADD_SUBDIRECTORY( NoiseImageFilter )
+
+# This plugin does not currently compile on Windows
+IF( NOT WIN32 )
+  ADD_SUBDIRECTORY( FFTConvolutionImageFilter )
+ENDIF( NOT WIN32 )
