Changed these plugins to be subclasses of vtkITKImageFilter.

--- a/MeanImageFilter/CMakeLists.txt
+++ b/MeanImageFilter/CMakeLists.txt
@@ -10,8 +10,14 @@ ADD_PARAVIEW_PLUGIN(${PLUGIN} 1.0
 # This lets you build INSTALL and have it automatically drop the
 # resulting DLLs in the directory where they will be autoloaded
 # by ParaView.
-INSTALL(TARGETS     ${PLUGIN} 
-		DESTINATION ${ParaView_BINARY_DIR}\\plugins
+INSTALL(TARGETS ${PLUGIN}
+  DESTINATION ${ParaView_BINARY_DIR}\\plugins
 )
 
-TARGET_LINK_LIBRARIES(${PLUGIN} itksys ITKCommon ITKBasicFilters ITKIO)
+TARGET_LINK_LIBRARIES(${PLUGIN}
+  itksys
+  ITKCommon
+  ITKBasicFilters
+  ITKIO
+  ParaViewITKPluginsCommon
+)
