Made adding other deconvolution algorithms a simple matter of adding the name of the filter to a list.

--- a/DeconvolutionFilters/CMakeLists.txt
+++ b/DeconvolutionFilters/CMakeLists.txt
@@ -1,19 +1,26 @@
-SET(PLUGIN  WienerDeconvolutionImageFilter)
-SET(XML     WienerDeconvolutionImageFilter.xml)
-ADD_PARAVIEW_PLUGIN( WienerDeconvolutionImageFilter 1.0
-  SERVER_MANAGER_XML ${XML}
-  SERVER_MANAGER_SOURCES vtkWienerDeconvolutionImageFilter.cxx
-  SOURCES ${XML}
-)
-
-INSTALL(TARGETS ${PLUGIN}
-  DESTINATION ${ParaView_BINARY_DIR}\\plugins
-)
-
 INCLUDE_DIRECTORIES( ${ParaViewITKPlugins_SOURCE_DIR}/InsightJournal/deconv )
 INCLUDE_DIRECTORIES( ${ParaViewITKPlugins_SOURCE_DIR}/InsightJournal/fftconv )
 
-TARGET_LINK_LIBRARIES(${PLUGIN}
+SET( ParaViewITKPluginsDeconvolutionSrcs
+  vtkDeconvolutionImageFilter.cxx
+)
+VTK_WRAP_ClientServer("DeconvolutionImageFilter"
+  WrappedSrcs "${ParaViewITKPluginsDeconvolutionSrcs}")
+ADD_LIBRARY( ParaViewITKPluginsDeconvolution
+  ${ParaViewITKPluginsDeconvolutionSrcs}
+  ${WrappedSrcs}
+  ../InsightJournal/fftconv/itkFFTWLock.cxx
+)
+TARGET_LINK_LIBRARIES( ParaViewITKPluginsDeconvolution
+  vtkClientServer
+  vtkPVServerManager
+  itksys
+  ITKCommon
+  ITKBasicFilters
+  ITKIO
+)
+
+SET( LINK_LIBRARIES
   itksys
   ITKCommon
   ITKBasicFilters
@@ -23,4 +30,30 @@ TARGET_LINK_LIBRARIES(${PLUGIN}
   ${FFTWD_LIB}
   ${FFTWD_THREADS_LIB}
   ParaViewITKPluginsCommon
+  ParaViewITKPluginsDeconvolution
 )
+
+SET( DECONVOLUTION_PLUGINS
+  RegularizedLeastSquaresDeconvolutionImageFilter
+  TikhonovMillerDeconvolutionImageFilter
+  WienerDeconvolutionImageFilter
+)
+
+FOREACH( PLUGIN ${DECONVOLUTION_PLUGINS} )
+
+  SET(XML "${PLUGIN}.xml")
+  ADD_PARAVIEW_PLUGIN( "${PLUGIN}" 1.0
+    SERVER_MANAGER_XML ${XML}
+    SERVER_MANAGER_SOURCES "vtk${PLUGIN}.cxx"
+    SOURCES ${XML}
+    )
+
+  INSTALL(TARGETS ${PLUGIN}
+    DESTINATION ${ParaView_BINARY_DIR}\\plugins
+    )
+
+  TARGET_LINK_LIBRARIES(${PLUGIN}
+    ${LINK_LIBRARIES}
+    )
+
+ENDFOREACH( PLUGIN )
