Added a GUI configuration XML file to tell ParaView to put deconvolution filters in a separate submenu.

--- a/DeconvolutionFilters/CMakeLists.txt
+++ b/DeconvolutionFilters/CMakeLists.txt
@@ -58,6 +58,7 @@ FOREACH( PLUGIN ${DECONVOLUTION_PLUGINS} )
     SERVER_MANAGER_XML ${XML}
     SERVER_MANAGER_SOURCES "vtk${PLUGIN}.cxx"
     SOURCES ${XML}
+    GUI_RESOURCE_FILES "Categories.xml"
     )
 
   INSTALL(TARGETS ${PLUGIN}
