--- a/filters/CMakeLists.txt
+++ b/filters/CMakeLists.txt
@@ -3,13 +3,14 @@ include(${ITK_USE_FILE})
 
 set(classes
   vtkCoocurrenceTextureFeaturesImageFilter
+  vtkBinaryThinning3DFilter
 )
 
-vtk_module_add_module(ITK::vtkCoocurrenceTextureFeaturesImageFilter
+vtk_module_add_module(ITK::vtkITKImageFilters
   CLASSES ${classes}
 )
 
-vtk_module_link(ITK::vtkCoocurrenceTextureFeaturesImageFilter
+vtk_module_link(ITK::vtkITKImageFilters
   PUBLIC
     ${ITK_LIBRARIES}
 )
